--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-to-print": "^2.15.1",
     "react-toastify": "^9.1.3",
     "recharts": "^2.8.0",
     "socket.io": "^4.7.5",
